text overlapping issue resolved

--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -1090,6 +1090,11 @@
   font-size: 1.4rem;
   margin-top: 0.6rem;
 }
+
+.crypto-wallet-subtext {
+  max-width: 40% !important;
+}
+
 @media (max-width: 900px) {
   .audience .layout-horizontal {
     max-width: 100%;
